# launcher

./: .clangd  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  bindist-gcc-static.sh  bindist-mingw-static.sh  packages.manifest  repositories.manifest
.github/: CODE_OF_CONDUCT.md
.github/workflows/: lint.yml  release.yml
etc/private/glibc-compat/: gensym.py  glibc-2.41.h
hello/: manifest
hello/doc/: .gitignore  buildfile  hello-prologue.xhtml  hello.css
hello/hello/: .gitignore  blake3-dispatch.c  blake3-portable.c  blake3.c  buildfile  hello-download.cxx  hello-download.hxx  hello-github.cxx  hello-github.hxx  hello-http.cxx  hello-http.hxx  hello-manifest.cxx  hello-manifest.hxx  hello-progress.cxx  hello-progress.hxx  hello-steam.cxx  hello-steam.hxx  hello.cli  hello.cxx  version.hxx.in
hello/hello/download/: download-manager.cxx  download-manager.hxx  download-manager.ixx  download-manager.txx  download-request.cxx  download-request.hxx  download-response.cxx  download-response.hxx  download-task.cxx  download-task.hxx  download-task.txx  download-types.cxx  download-types.hxx  download.cxx  download.hxx
hello/hello/github/: github-api.cxx  github-api.hxx  github-api.txx  github-endpoint.cxx  github-endpoint.hxx  github-request.cxx  github-request.hxx  github-types.cxx  github-types.hxx
hello/hello/http/: http-client.cxx  http-client.hxx  http-client.ixx  http-client.txx  http-endpoint.cxx  (+16 more)
launcher/: README.md  buildfile  manifest
launcher/launcher/: .gitignore  blake3-dispatch.c  blake3-sse2.c  blake3-sse41.c  buildfile  launcher-cache.cxx  launcher-cache.hxx  launcher-download.cxx  launcher-download.hxx  launcher-github.cxx  launcher-github.hxx  launcher-http.cxx  launcher-http.hxx  launcher-log.cxx  launcher-log.hxx  launcher-manifest.cxx  launcher-manifest.hxx  launcher-progress.cxx  launcher-progress.hxx  launcher-steam-proton.cxx  launcher-steam-proton.hxx  launcher-steam.cxx  launcher-steam.hxx  launcher-update.cxx  launcher-update.hxx  launcher.cli  launcher.cxx  version.hxx.in
src/: ascii_art.rs  cache.rs  cdn.rs  config.rs  directx.rs  dlc.rs  extend.rs  game.rs  game_files.rs  github.rs  global.rs  http.rs  http_async.rs  main.rs  migrations.rs  misc.rs  release_definition.rs  release_tool.rs  self_update.rs
(+141 files in other folders)
