[package]
name = "iw4x-launcher"
version = "1.0.3"
edition = "2021"
build = "build.rs"

[profile.release]
opt-level = "s"
panic = "abort"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "3.0"
simple-log = "2.3"
blake3 = "1.8"
futures-util = "0.3"
futures = "0.3"
indicatif = "0.18"
log = "0.4"
once_cell = "1.21"
clap = { version = "4.5", features = ["derive"] }
semver = "1.0"
rand = "0.9"
crossterm = "0.29"
zip = "5.1.1"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", default-features = false, features = ["vendored"] }

[target.'cfg(windows)'.dependencies]
mslnk = "0.1"
self-replace = "1.5"

[build-dependencies]
winresource = "0.1"
static_vcruntime = "2.0"

[package.metadata.winresource]
OriginalFilename = "iw4x-launcher.exe"
FileDescription = "IW4x Launcher"
ProductName = "github.com/iw4x/launcher"